# TcpSocketMCP

./: .gitignore  .pre-commit-config.yaml  CI_INTEGRATION_SUMMARY.md  CLAUDE.md  LICENSE  README.md  TESTING.md  pyproject.toml  pytest.ini  run.py
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml  quality-gates.yml  test-status.yml
src/: __init__.py
src/TcpSocketMCP/: __init__.py  __main__.py  connection.py  server.py
src/tcp_socket_mcp/: __init__.py  server.py
tcp-socket-mcp/: CAPABILITIES.md  FEATURES_SUMMARY.md  FINAL_FIX.md  FIXED.md  FIX_COMPLETE.md  HEX_ENCODING_EXAMPLES.md  LICENSE  MODEL_GUIDE.md  QUICK_START.md  README.md  SUCCESS.md  TCP_CONNECT_AND_SEND.md  TERMINATOR_EXAMPLES.md  TRIGGER_PREREGISTRATION.md  TRIGGER_TEST_EXAMPLE.md  WORKING_FIX.md  add_to_claude.sh  example_usage.py  inspect_mcp.py  run_with_inspector.sh  test_connect_and_send.py  test_final.py  test_hex.py  test_hex_format.py  test_mcp.py  test_preregister.py  test_run.py  test_server.py  test_simple.py  test_terminator.py  verify_server.py
tcp-socket-mcp/src/tcp_socket_mcp/: __init__.py  __main__.py  connection.py  server.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/integration/helpers/: __init__.py  tcp_server.py
tests/unit/: __init__.py  test_connection.py  test_main.py  test_server.py  test_server_coverage.py
